--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ứng dụng Web In Đơn Hàng</title>
 </head>
 <body>
-    <h1>In Đơn Hàng</h1>
+    <h1>In Đơn Hàng UPDATE 1</h1>
     
     <form id="orderForm">
         <label for="orderId">Mã Đơn Hàng:</label>
